Add search and sorting capability